* io.c (rb_io_flush_raw, rb_io_fsync): [EXPERIMENTAL] remove force   syncing for Win32 to speed up IO.  this may break some tests, and   they'll be fixed later.   [ruby-core:58570] [Bug #9153]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@45254 b2dd03c8-39d4-4d8f-98ff-823fe69b080e